--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-config-airbnb": "^9.0.1",
@@ -36,6 +37,8 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.19.0",
     "raw-loader": "^0.5.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
     "strip-loader": "^0.1.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
