--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
+    "webpack-bundle-tracker": "0.0.93",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
