--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-bundle-tracker": "0.0.93",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-validator": "^2.1.3"
   },
   "dependencies": {
     "bootstrap": "^3.3.6"
