--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/SHLo/ES2015-test#readme",
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
@@ -37,6 +38,8 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.19.0",
     "open-browser-webpack-plugin": "0.0.2",
+    "postcss-loader": "^0.9.1",
+    "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
