--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
     "react": "^15.1.0",
+    "react-css-modules": "^3.7.6",
     "react-dom": "^15.1.0",
     "resolve-url-loader": "^1.4.4",
     "sass-loader": "^4.0.0",
