--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
+    "font-awesome": "^4.6.3",
+    "font-awesome-webpack": "0.0.4",
     "html-webpack-plugin": "^2.19.0",
     "imports-loader": "^0.6.5",
     "jquery": "^3.0.0",
